--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "wb-admin",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kobosterus.github.io/WB_ADMIN",
   "dependencies": {
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.0",
@@ -22,9 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -49,7 +46,6 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
-    "gh-pages": "^6.3.0",
     "react-scripts": "5.0.1"
   }
 }
