--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "winston": "^3.17.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +50,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
+    "@types/jspdf": "^1.3.3",
     "react-scripts": "5.0.1"
   }
 }
