--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.1",
+    "file-saver": "^2.0.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.0",
     "@types/jspdf": "^1.3.3",
     "react-scripts": "5.0.1"
