--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.0",
     "@types/react-bootstrap": "^0.32.35",
