--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.0",
     "@types/jspdf": "^1.3.3",
+    "@types/react-responsive": "^8.0.8",
     "react-scripts": "5.0.1"
   }
 }
